--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">MMS Mentor Manager</string>
+    <string name="title_activity_mentor_list">mentor_list</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="some_id">6.25</string>
+    <string name="mentors">Mentors</string>
+    <string name="body_1">All mentors</string>
+    <string name="peculiar_c_">Peculiar C. Umeh</string>
+    <string name="program_ass">Program Assistant, Andela, She/her</string>
+    <string name="mentro_title">PROGRAM ASST.</string>
+    <string name="mentor_gad">MENTOR-GAD</string>
 </resources>
