--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="sort">Sort</string>
     <string name="google_afri_report">Google Africa Scholarship Report</string>
     <string name="by_ibrahim_">By Ibrahim Kabir  -  19th - 25th Oct 22</string>
+    <string name="gads_cloud_">GADS CLOUD 2022 - COMPLETION</string>
 
 
 </resources>
